[project]
name = "mppPy"
version = "0.1.0"
description = "Maximum power point tracking for PV devices using GPIB connected sourcemeter and optional shutter control."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nidaqmx>=1.0.2",
    "pydantic>=2.11.4",
    "pyvisa>=1.15.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
extend-exclude = [".venv"]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = false
